# lab09

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: cmake.yml
formatter_ex_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
tests/: test1.cpp
